welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: reassignment to val
  c=getCouleurSol()
   ^SlugSnail:35: error: not found: value c
    if (getCouleurSol()==c) {
                         ^